# LaboratoryWorks

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  README.adoc  README.md  sonar-project.properties  sonar-project.properties.txt
.github/workflows/: build.yml
Lazakovich V/Lab1/: Source.c  Source2.c  Source3.c  Source4.c  Лаб1.docx
Lazakovich V/Lab2/: 1.c  2.c  3.c
Lazakovich V/Lab3/: 3.c
Lazakovich V/Lab4/: 4_1.c  CMakeLists.txt
Lazakovich V/Lab5/: array.c  array.h  check.c  functions2.c  functions3.c  task1.c  task2.c  task3.c  test.c
Lazakovich V/Lab6/: 1.c  functs_task1.c  functs_task1.h  functs_task2.c  functs_task2.h
Lazakovich V/Lab7/: CMakeLists.txt  crush.c  library.c  library.h  main.c  sonar-project.properties  tasks.c
Lazakovich V/Lab8/: CMakeLists.txt  library.c  main.c
Lazakovich V/idk/: CMakeLists.txt  add.c  add.h  main.c
Lazakovich V/lab3/: 1.c  2.c  3.c
Lazakovich V/strFunctions/: CMakeLists.txt  allSorts.c  strFoo.c
src/CPP-Learn/: OOP.cpp
src/CPP_TEST/: CMakeLists.txt  main.cpp
src/Lab/: CMakeLists.txt  bd.yml  data.txt  dbTEST.txt
src/Lab1/: CMakeLists.txt  functions.c  library.h  main.c
src/Lab2/: CMakeLists.txt  Hash.c  compressed.txt  decompress.c  file.txt  functions.c  main.c  out.txt
src/Lab2(multithdreading)/: CMakeLists.txt  compress.cpp  header.h  main.cpp
src/Lab2_2/: decompress.c  functions.c  library.h  main.c
src/Lab3/: BMP_Process.c  BitMapPicture.h  CMakeLists.txt  main.c  photoshopULTRA_MAX.c
src/Lab4/: CMakeLists.txt  bd.yml  (+2 more)
src/Lab4-2/: db.json  db.txt  db2.json
src/Lab4-WN/: windows.c
(+88 files in other folders)
