cmake_minimum_required(VERSION 3.23)
project(LaboratoryWorks C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(LaboratoryWorks src/Lab1)
add_subdirectory(LaboratoryWorks src/Lab2)
add_subdirectory(LaboratoryWorks src/Lab3)
add_subdirectory(LaboratoryWorks src/Lab4)
add_subdirectory(LaboratoryWorks src/Lab5)
